--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -1,9 +1,12 @@
 #app {
     padding: 1rem;
+    height: 100%;
+}
+#components-layout-demo-basic {
+    height: 100%;
 }
 #components-layout-demo-basic .ant-layout-header {
-    background: #7dbcea;
-    color: #fff;
+    background: white;
 }
 #components-layout-demo-basic .ant-layout-sider {
     background: #3ba0e9;
@@ -18,7 +21,7 @@
     line-height: 120px;
 }
 #components-layout-demo-basic > .ant-layout {
-    margin-bottom: 48px;
+    min-height: 100%;
 }
 #components-layout-demo-basic > .ant-layout:last-child {
     margin: 0;
