--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -3,6 +3,7 @@
     height: 100%;
 }
 #components-layout-demo-basic {
+    direction: rtl;
     height: 100%;
 }
 #components-layout-demo-basic .ant-layout-header {
