--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -16,10 +16,9 @@
     padding: 1rem;
 }
 #components-layout-demo-basic .ant-layout-content {
-    background: rgba(16, 142, 233, 1);
-    color: #fff;
+    padding-top: 2rem;
     min-height: 120px;
-    line-height: 120px;
+    // background: rgba(16, 142, 233, 1);
 }
 #components-layout-demo-basic > .ant-layout {
     min-height: 100%;
