--- a/public/css/app.css
+++ b/public/css/app.css
@@ -23982,10 +23982,15 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
 
 #components-layout-demo-basic .ant-layout-header {
   background: white;
+  display: flex;
+}
+#components-layout-demo-basic .ant-layout-header h1 {
+  margin-left: 10px;
+  font-size: 30px;
 }
 
 #components-layout-demo-basic .ant-layout-sider {
-  background: #3ba0e9;
+  background: #3be9a961;
   color: #fff;
   line-height: 120px;
   padding: 1rem;
@@ -24002,4 +24007,9 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
 
 #components-layout-demo-basic > .ant-layout:last-child {
   margin: 0;
+}
+
+.ant-form-item-label label {
+  font-weight: bold;
+  font-size: 16px;
 }
