--- a/public/css/app.css
+++ b/public/css/app.css
@@ -23986,7 +23986,7 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
 }
 #components-layout-demo-basic .ant-layout-header h1 {
   margin-left: 10px;
-  font-size: 30px;
+  font-size: 40px;
 }
 
 #components-layout-demo-basic .ant-layout-sider {
@@ -24011,5 +24011,17 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
 
 .ant-form-item-label label {
   font-weight: bold;
-  font-size: 16px;
+  font-size: 30px;
+}
+
+.ant-form label {
+  font-size: 20px;
+}
+
+.ant-checkbox-wrapper {
+  font-size: 20px;
+}
+
+.ant-btn-primary.ant-btn-lg {
+  font-size: 26px;
 }
