--- a/public/css/app.css
+++ b/public/css/app.css
@@ -23997,7 +23997,7 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
 }
 
 #components-layout-demo-basic .ant-layout-content {
-  padding-top: 2rem;
+  padding: 2rem 3rem 0;
   min-height: 120px;
 }
 
