--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -21,7 +21,7 @@
     padding: 1rem;
 }
 #components-layout-demo-basic .ant-layout-content {
-    padding-top: 2rem;
+    padding: 2rem 3rem 0;
     min-height: 120px;
     // background: rgba(16, 142, 233, 1);
 }
