--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -47,3 +47,6 @@
 .ant-btn-primary.ant-btn-lg {
     font-size: 26px;
 }
+.ant-calendar-time .ant-calendar-footer .ant-calendar-time-picker-btn {
+    display: none;
+}
