--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -50,3 +50,7 @@
 .ant-calendar-time .ant-calendar-footer .ant-calendar-time-picker-btn {
     display: none;
 }
+
+.ant-calendar-picker-input.ant-input {
+    padding-right: 50px;
+}
