--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -9,8 +9,9 @@
 #components-layout-demo-basic .ant-layout-header {
     background: white;
     display: flex;
+    align-items: center;
     h1 {
-        margin-left: 10px;
+        margin: 0 0 0 10px;
         font-size: 40px;
     }
 }
@@ -44,9 +45,6 @@
     font-size: 20px;
 }
 
-.ant-btn-primary.ant-btn-lg {
-    font-size: 26px;
-}
 .ant-calendar-time .ant-calendar-footer .ant-calendar-time-picker-btn {
     display: none;
 }
