--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -38,9 +38,15 @@
 }
 
 .ant-form label {
-    font-size: 20px;
+    font-size: 30px;
+    color: #1317fa;
 }
 
+.ant-input,
+.ant-input-number-input,
+.ant-radio-wrapper span {
+    color: #f00;
+}
 .ant-checkbox-wrapper {
     font-size: 20px;
 }
@@ -51,4 +57,12 @@
 
 .ant-calendar-picker-input.ant-input {
     padding-right: 50px;
+}
+
+.ant-drawer-content {
+    background-color: #efe4b0;
+}
+
+.ant-row-flex {
+    flex-wrap: nowrap !important;
 }
