changed grid color and seperated range

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24045,3 +24045,11 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
 .ant-row-flex {
   flex-wrap: nowrap !important;
 }
+
+.ant-input-number + .ant-input-number {
+  margin-left: 20px;
+}
+
+.ant-calendar-picker + .ant-calendar-picker {
+  margin-left: 20px;
+}
