--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -46,6 +46,7 @@
 .ant-input-number-input,
 .ant-radio-wrapper span {
     color: #f00;
+    font-size: 30px;
 }
 .ant-checkbox-wrapper {
     font-size: 20px;
@@ -57,6 +58,8 @@
 
 .ant-calendar-picker-input.ant-input {
     padding-right: 50px;
+    height: 50px;
+    width: 300px;
 }
 
 .ant-drawer-content {
@@ -73,4 +76,26 @@
 
 .ant-calendar-picker + .ant-calendar-picker {
     margin-left: 20px;
+}
+
+.ant-radio {
+    margin-bottom: 5px;
+}
+.ant-input-number-lg,
+.ant-input-number-lg input {
+    height: 50px;
+}
+
+.ant-select-selection__rendered,
+.ant-select-selection__placeholder,
+.ant-select-search__field__placeholder {
+    font-size: 30px;
+    height: 50px !important;
+}
+
+.sm-ch .ant-select-selection__rendered,
+.sm-ch .ant-select-selection__placeholder,
+.sm-ch .ant-select-search__field__placeholder {
+    font-size: 25px;
+    height: 40px !important;
 }
