--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24016,15 +24016,27 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
 }
 
 .ant-form label {
-  font-size: 30px;
+  font-size: 50px;
   color: #1317fa;
+}
+
+.ant-form-item-label {
+  line-height: 60px;
+}
+
+.ant-radio-inner {
+  top: -15px;
+}
+
+.ant-radio-inner::after {
+  left: 2px;
 }
 
 .ant-input,
 .ant-input-number-input,
 .ant-radio-wrapper span {
   color: #f00;
-  font-size: 30px;
+  font-size: 50px;
 }
 
 .ant-checkbox-wrapper {
@@ -24036,9 +24048,9 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
 }
 
 .ant-calendar-picker-input.ant-input {
-  padding-right: 50px;
-  height: 50px;
-  width: 300px;
+  height: 80px;
+  padding: 10px 0 10px 10px;
+  width: 560px;
 }
 
 .ant-drawer-content {
@@ -24063,19 +24075,30 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
 
 .ant-input-number-lg,
 .ant-input-number-lg input {
-  height: 50px;
+  height: 80px;
+  padding-left: 10px !important;
+  padding: 0;
 }
 
 .ant-select-selection__rendered,
 .ant-select-selection__placeholder,
 .ant-select-search__field__placeholder {
-  font-size: 30px;
-  height: 50px !important;
+  font-size: 60px;
+  height: 80px !important;
 }
 
-.sm-ch .ant-select-selection__rendered,
-.sm-ch .ant-select-selection__placeholder,
-.sm-ch .ant-select-search__field__placeholder {
-  font-size: 25px;
-  height: 40px !important;
+.ant-select-lg .ant-select-selection--multiple .ant-select-selection__rendered li {
+  height: 80px;
+  line-height: 80px;
+}
+
+.ant-select-selection__placeholder,
+.ant-select-search__field__placeholder {
+  top: 23%;
+  line-height: 60px;
+}
+
+.ant-select-dropdown-menu-item {
+  font-size: 60px;
+  line-height: 60px;
 }
