--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -38,15 +38,23 @@
 }
 
 .ant-form label {
-    font-size: 30px;
+    font-size: 50px;
     color: #1317fa;
 }
-
+.ant-form-item-label {
+    line-height: 60px;
+}
+.ant-radio-inner {
+    top: -15px;
+}
+.ant-radio-inner::after {
+    left: 2px;
+}
 .ant-input,
 .ant-input-number-input,
 .ant-radio-wrapper span {
     color: #f00;
-    font-size: 30px;
+    font-size: 50px;
 }
 .ant-checkbox-wrapper {
     font-size: 20px;
@@ -57,9 +65,9 @@
 }
 
 .ant-calendar-picker-input.ant-input {
-    padding-right: 50px;
-    height: 50px;
-    width: 300px;
+    height: 80px;
+    padding: 10px 0 10px 10px;
+    width: 560px;
 }
 
 .ant-drawer-content {
@@ -83,19 +91,31 @@
 }
 .ant-input-number-lg,
 .ant-input-number-lg input {
-    height: 50px;
+    height: 80px;
+    padding-left: 10px !important;
+    padding: 0;
 }
 
 .ant-select-selection__rendered,
 .ant-select-selection__placeholder,
 .ant-select-search__field__placeholder {
-    font-size: 30px;
-    height: 50px !important;
+    font-size: 60px;
+    height: 80px !important;
 }
 
-.sm-ch .ant-select-selection__rendered,
-.sm-ch .ant-select-selection__placeholder,
-.sm-ch .ant-select-search__field__placeholder {
-    font-size: 25px;
-    height: 40px !important;
+.ant-select-lg
+    .ant-select-selection--multiple
+    .ant-select-selection__rendered
+    li {
+    height: 80px;
+    line-height: 80px;
+}
+.ant-select-selection__placeholder,
+.ant-select-search__field__placeholder {
+    top: 23%;
+    line-height: 60px;
+}
+.ant-select-dropdown-menu-item {
+    font-size: 60px;
+    line-height: 60px;
 }
