--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -9,10 +9,11 @@
 #components-layout-demo-basic .ant-layout-header {
     background: white;
     display: flex;
+    height: 100px;
     align-items: center;
     h1 {
         margin: 0 0 0 10px;
-        font-size: 40px;
+        font-size: 80px;
     }
 }
 #components-layout-demo-basic .ant-layout-sider {
