--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -120,3 +120,12 @@
     font-size: 60px;
     line-height: 60px;
 }
+
+.ant-drawer-content-wrapper {
+    width: 100% !important;
+}
+
+.ant-input {
+    height: 80px;
+    width: 500px;
+}
