--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24027,10 +24027,15 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
 
 .ant-radio-inner {
   top: -15px;
+  width: 20px;
+  height: 20px;
 }
 
 .ant-radio-inner::after {
-  left: 2px;
+  left: 1px;
+  width: 15px;
+  height: 15px;
+  top: 1px;
 }
 
 .ant-input,
@@ -24111,4 +24116,14 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
 .ant-input {
   height: 80px;
   width: 500px;
+}
+
+.ant-checkbox-inner::after {
+  width: 10px;
+  height: 20px;
+}
+
+.ant-checkbox-inner {
+  width: 30px;
+  height: 30px;
 }
