--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -47,9 +47,14 @@
 }
 .ant-radio-inner {
     top: -15px;
+    width: 20px;
+    height: 20px;
 }
 .ant-radio-inner::after {
-    left: 2px;
+    left: 1px;
+    width: 15px;
+    height: 15px;
+    top: 1px;
 }
 .ant-input,
 .ant-input-number-input,
@@ -128,4 +133,14 @@
 .ant-input {
     height: 80px;
     width: 500px;
+}
+
+.ant-checkbox-inner::after {
+    width: 10px;
+    height: 20px;
+}
+
+.ant-checkbox-inner {
+    width: 30px;
+    height: 30px;
 }
