--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24026,16 +24026,17 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
 }
 
 .ant-radio-inner {
-  top: -15px;
-  width: 20px;
-  height: 20px;
+  top: -5px;
+  width: 30px;
+  height: 30px;
 }
 
 .ant-radio-inner::after {
-  left: 1px;
-  width: 15px;
-  height: 15px;
-  top: 1px;
+  left: 4px;
+  width: 20px;
+  height: 20px;
+  border-radius: 32px;
+  top: 4px;
 }
 
 .ant-input,
@@ -24104,7 +24105,12 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
   line-height: 60px;
 }
 
+.ant-select-selection--multiple .ant-select-selection__choice {
+  color: black;
+}
+
 .ant-select-dropdown-menu-item {
+  color: black;
   font-size: 60px;
   line-height: 60px;
 }
@@ -24119,15 +24125,19 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
 }
 
 .ant-checkbox-inner::after {
-  width: 10px;
-  height: 20px;
+  width: 15px;
+  height: 35px;
 }
 
 .ant-checkbox-inner {
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
 }
 
 .ant-select-dropdown-menu {
   max-height: 750px !important;
+}
+
+.ant-select-dropdown.ant-select-dropdown--multiple .ant-select-dropdown-menu-item .ant-select-selected-icon {
+  font-size: 24px;
 }
