--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -123,10 +123,10 @@
     line-height: 60px;
 }
 .ant-select-selection--multiple .ant-select-selection__choice {
-    color: black;
+    color: #1317fa;
 }
 .ant-select-dropdown-menu-item {
-    color: black;
+    color: #1317fa;
     font-size: 60px;
     line-height: 60px;
 }
