--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24106,11 +24106,11 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
 }
 
 .ant-select-selection--multiple .ant-select-selection__choice {
-  color: black;
+  color: #1317fa;
 }
 
 .ant-select-dropdown-menu-item {
-  color: black;
+  color: #1317fa;
   font-size: 60px;
   line-height: 60px;
 }
