--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -129,7 +129,7 @@
 }
 .ant-select-dropdown-menu-item {
     color: #1317fa;
-    // font-size: 60px;
+    font-size: 20px;
     // line-height: 60px;
 }
 
