--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24053,7 +24053,7 @@ li.ant-tree-treenode-disabled > .ant-tree-node-content-wrapper:hover {
 }
 
 .ant-drawer-content {
-  background-color: #efe4b0;
+  background-color: lightblue;
 }
 
 .ant-row-flex {
